--- a/layouts/page/talks.html
+++ b/layouts/page/talks.html
@@ -4,6 +4,7 @@
 	{{ partial "sidebar.html" . }}
 
 	<div class="content pure-u-1 pure-u-md-3-4">
+		{{ partial "links.html" . }}
 		<div>
 			<h1>Talks</h1>
 			<div class="index">
