--- a/layouts/page/software.html
+++ b/layouts/page/software.html
@@ -4,6 +4,7 @@
 	{{ partial "sidebar.html" . }}
 
 	<div class="content pure-u-1 pure-u-md-3-4">
+		{{ partial "links.html" . }}
 		<div>
 			<div class="index">
 				<h1>Author</h1>
