--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar pure-u-1 pure-u-md-1-4">
     <div class="header">
         <hgroup>
-			<img src="/assets/pics/me.jpg" width="80%">
+			<img src="/assets/pics/me2.png" width="80%">
             <h1 class="brand-title"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
             <h2 class="brand-tagline">{{ with .Site.Params.description }} {{.}} {{end}}</h2>
         </hgroup>
