--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,9 +3,9 @@
 <div id="layout" class="pure-g">
     {{ partial "sidebar.html" . }}
 
-    <div class="content pure-u-1 pure-u-md-3-4">
+    <div class="content pure-u-1 pure-u-md-3-4" style="padding: 0;">
 		{{ partial "links.html" . }}
-        <div>
+        <div style="padding-left: 1em; padding-right: 1em; margin-left: auto; margin-right: auto;">
             <!-- A wrapper for all the blog posts -->
             <div class="posts">
                 <h1 class="content-subhead">{{ .Date.Format "02 Jan 2006, 15:04" }}</h1>
