--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/grids-responsive-min.css">
 
     <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/all.min.css">
+    <link rel="stylesheet" href="{{ .Site.BaseURL }}/assets/main.css">
     <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="{{ .Site.BaseURL }}/index.xml" />
 </head>
 <body>
