--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,9 +1,9 @@
 {{ partial "header.html" . }}
 <div id="layout" class="pure-g">
     {{ partial "sidebar.html" . }}
-    <div class="content pure-u-1 pure-u-md-3-4">
+    <div class="content pure-u-1 pure-u-md-3-4" style="padding: 0;">
 		{{ partial "links.html" . }}
-		<div>
+        <div style="padding-left: 1em; padding-right: 1em; margin-left: auto; margin-right: auto;">
 			{{ range .Data.Pages  }}
 				{{ if eq .Type "index" }}
 					{{ .Content }}
