--- a/static/assets/main.css
+++ b/static/assets/main.css
@@ -1,4 +1,4 @@
-.grids-example {
+.well {
 	background: rgb(250, 250, 250);
 
 	margin-left: -1em;
@@ -8,6 +8,11 @@
 	border-bottom: 1px solid #ddd;
 }
 
+.well-title {
+	font-weight: bold;
+	font-size: 1.17em;
+}
+
 .l-box {
 	padding: 1em;
 }
@@ -15,6 +20,14 @@
 .l-box h3{
 	font-weight: bold;
 }
+
+.l-box.postmeta {
+	padding-top: .5em;
+	padding-left: 0;
+	padding-right: 0;
+	color: #555;
+}
+
 
 .pure-img {
 	max-width: 100%;
