--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,9 +2,7 @@
 	<div class="pure-menu pure-menu-horizontal pure-menu-open">
 		<ul>
 			<li>
-				<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-					<img src="https://img.shields.io/github/license/erasche/erasche.github.io.svg?style=flat-square">
-				</a>
+				This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
 			</li>
 			<li>Powered by <a class="hugo" href="https://gohugo.io/" target="_blank">hugo</a></li>
 		</ul>
