--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,14 +11,26 @@
                 <h1 class="content-subhead">{{ .Date }}</h1>
                 <section class="post">
                     <header class="post-header">
-                        {{ if .Draft }}<a href="/drafts/" style="font-size: 2em">[DRAFT]</a> {{ end }}
-                        <a href="{{ .Permalink }}" class="post-title">{{ .Title }}</a>
-						{{ if isset .Params "repo" }}
-                        <a href="https://github.com/{{ index .Params "repo" }}" style="text-decoration: none">
-                            <img src="https://img.shields.io/badge/repo-{{ replace (replace (index .Params "repo") "/" "/") "-" "_" }}-green.svg?style=flat-square">
-                            <img src="https://img.shields.io/github/license/{{ index .Params "repo" }}.svg?style=flat-square">
-                        </a>
-						{{ end }}
+                        <div class="pure-g">
+                            {{ if isset .Params "repo" }}
+                                <div class="pure-u-2-3">
+                                    {{ if .Draft }}<a href="/drafts/" style="font-size: 2em">[DRAFT]</a> {{ end }}
+                                    <a href="{{ .Permalink }}" class="post-title">{{ .Title }}</a>
+                                </div>
+                                <div class="pure-u-1-3" style="text-align: right">
+                                    <a href="https://github.com/{{ index .Params "repo" }}" style="text-decoration: none">
+                                        <img src="https://img.shields.io/badge/repo-{{ replace (replace (index .Params "repo") "/" "/") "-" "_" }}-green.svg?style=flat-square">
+                                        <br />
+                                        <img src="https://img.shields.io/github/license/{{ index .Params "repo" }}.svg?style=flat-square">
+                                    </a>
+                                </div>
+                            {{ else }}
+                                <div class="pure-u-1">
+                                    {{ if .Draft }}<a href="/drafts/" style="font-size: 2em">[DRAFT]</a> {{ end }}
+                                    <a href="{{ .Permalink }}" class="post-title">{{ .Title }}</a>
+                                </div>
+                            {{ end }}
+                        </div>
                         <div>
                             {{ range .Params.tags }}
                             <a class="pure-button button-secondary" href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
