--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,5 +18,7 @@
     <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/all.min.css">
     <link rel="stylesheet" href="{{ .Site.BaseURL }}/assets/main.css">
     <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="{{ .Site.BaseURL }}/index.xml" />
+
+    <meta name="theme-color" content="#3d4f5d">
 </head>
 <body>
