--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -10,7 +10,7 @@
 			<div class="posts">
 				{{ range .Paginator.Pages }}
 					<h3>
-						{{ if .Draft  }}<a href="/drafts/" style="font-size: 2em">[DRAFT]</a> {{ end }}
+						{{ if .Draft  }}<a href="/drafts/" class="post-title" style="color: #888">[DRAFT]</a> {{ end }}
 						<a href="{{ .Permalink }}" class="post-title">{{ .Title }}</a>
 					</h3>
 						{{ .Summary }}...
