--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -2,7 +2,7 @@
     <div class="header">
         <hgroup>
             {{ with .Site.Params.picture }}
-            <img src="{{ . }}" width="80%" style="max-width: 240px;">
+            <img src="{{ . }}" width="80%" style="max-width: 240px;" alt="A stylised picture of the author">
             {{ end }}
             <h1 class="brand-title"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
             <h2 class="brand-tagline">{{ with .Site.Params.description }} {{.}} {{end}}</h2>
