--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1,7 +1,5 @@
 @charset "utf-8";
 
-// Define defaults for each variable.
-
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
@@ -44,6 +42,5 @@ $on-laptop:        800px !default;
 // Import partials.
 @import
   "minima/base",
-  "minima/layout",
-  "minima/syntax-highlighting"
+  "minima/layout"
 ;
