--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -4,8 +4,6 @@
 .site-header {
   border-bottom: 1px solid $grey-color-light;
   min-height: $spacing-unit * 1.865;
-
-  // Positioning context for the mobile navigation icon
   position: relative;
 }
 
@@ -16,11 +14,6 @@
   letter-spacing: -1px;
   margin-bottom: 0;
   float: left;
-
-  &,
-  &:visited {
-    color: $grey-color-dark;
-  }
 }
 
 .site-nav {
@@ -35,15 +28,7 @@
     display: none;
   }
 
-  .page-link {
-    color: $text-color;
-    line-height: $base-line-height;
-
-    // Gaps between nav items, but not on the last one
-    &:not(:last-child) {
-      margin-right: 20px;
-    }
-  }
+  .page-link { margin-right: 20px; }
 
   @include media-query($on-palm) {
     position: absolute;
@@ -51,7 +36,7 @@
     right: $spacing-unit / 2;
     background-color: $background-color;
     border: 1px solid $grey-color-light;
-    border-radius: 5px;
+    border-radius: 0px;
     text-align: right;
 
     label[for="nav-trigger"] {
@@ -124,7 +109,6 @@
   @include relative-font-size(0.9375);
   color: $grey-color;
   margin-left: -$spacing-unit / 2;
-  @extend %clearfix;
 }
 
 .footer-col {
