--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,25 +1,29 @@
 ---
 layout: default
 ---
+
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta">
-      <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-		{% assign date_format = site.minima.date_format | default: "%Y-%m-%dT%H:%M:%S" %}
-        {{ page.date | date: date_format }}
-      </time>
-      {% if page.author %}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>
-      {% endif %}</p>
-  </header>
+	<header class="post-header">
+		<h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
 
-  <div class="post-content" itemprop="articleBody">
-    {{ content }}
-  </div>
+		<p class="post-meta">
+			<span datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+				{%- assign date_format = site.minima.date_format | default: "%Y-%m-%dT%H:%M" -%}
+				{{- page.date | date: date_format -}}
+			</span>
+			{% if page.repo %}
+				<a href="https://github.com/{{ page.repo }}">
+					github:{{ page.repo }}
+				</a>
+			{% endif %}
 
-  {% if site.disqus.shortname %}
-    {% include disqus_comments.html %}
-  {% endif %}
+			{% if page.author %}
+				<span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>
+			{% endif %}</p>
+	</header>
+
+	<div class="post-content" itemprop="articleBody">
+		{{ content }}
+	</div>
 </article>
