--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,7 @@
 ---
 layout: default
 ---
-<style>
-table.post-meta td:first-child {
-	text-align: right;
-	padding-right: 1em;
-}
-</style>
+<script src="/js/deeplink.js"></script>
 
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
