--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -131,3 +131,27 @@ pre {
     padding-top: 5px;
   }
 }
+
+table.post-meta td:first-child {
+	text-align: right;
+	padding-right: 1em;
+}
+
+.header-link {
+    opacity: 0;
+    text-decoration: none;
+}
+
+h2:hover .header-link,
+h3:hover .header-link,
+h4:hover .header-link,
+h5:hover .header-link,
+h6:hover .header-link {
+    opacity: 1;
+    text-decoration: none;
+    color: $grey-color-dark;
+}
+
+h2,h3,h4,h5,h6 {
+    margin-left: -1em;
+}
