--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: default
 				<td>Project</td>
 				<td>
 					<a href="https://github.com/{{ page.repo }}">
-						github:{{ page.repo }}
+						github.com/{{ page.repo }}
 					</a>
 				</td>
 			</tr>
