--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
 
             {% if site.gpg %}
             <li>
-                <a style="font-family: monospace; text-transform: uppercase;" href="http://pgp.mit.edu/pks/lookup?op=vindex&search=0x{{ site.gpg }}">
+                <a class="gpg" href="http://pgp.mit.edu/pks/lookup?op=vindex&search=0x{{ site.gpg }}">
                     {{ site.gpg }}
                 </a>
             </li>
