--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1,7 +1,10 @@
 @charset "utf-8";
+@import url(/assets/ComputerModern/Serif/cmun-serif.css);
+@import url(/assets/ComputerModern/Typewriter/cmun-typewriter.css);
 
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
-$base-font-size:   16px !default;
+$base-font-family: "Computer Modern Serif", serif !default;
+$mono-font-family: "Computer Modern Typewriter", monospace;
+$base-font-size:   17px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
