--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -14,6 +14,12 @@
   letter-spacing: -1px;
   margin-bottom: 0;
   float: left;
+  font-family: $mono-font-family;
+}
+
+.gpg {
+	font-family: $mono-font-family;
+	text-transform: uppercase;
 }
 
 .site-nav {
