--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -154,3 +154,7 @@ h6:hover .header-link {
     text-decoration: none;
     color: $grey-color-dark;
 }
+
+project {
+    font-variant: small-caps
+}
