--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -35,5 +35,6 @@ $on-laptop:        800px !default;
 // Import partials.
 @import
   "minima/base",
-  "minima/layout"
+  "minima/layout",
+  "minima/syntax"
 ;
