--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,6 +49,23 @@ layout: default
 		</table>
 	</header>
 
+	{% if page.page_requires %}
+		{% for req in page.page_requires %}
+			{% if req == "d3" %}
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.4.1/d3.min.js" integrity="sha256-4mL8TQfOJSbg0f42dQw5cKLl2ngQXUSXqfQnvK11M44=" crossorigin="anonymous"></script>
+			{% endif %}
+
+			{% if req == "d3v4.12" %}
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.12.0/d3.min.js" integrity="sha256-TNlrZgMxbQoeCKCYUdhsLLuLZA77jcLU/3H8BZRM/3k=" crossorigin="anonymous"></script>
+			{% endif %}
+
+			{% if req == "jquery" %}
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+			{% endif %}
+		{% endfor %}
+	{% endif %}
+
+
 	<div class="post-content" itemprop="articleBody">
 		{{ content }}
 	</div>
