--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1,9 +1,6 @@
 @charset "utf-8";
-@import url(/assets/ComputerModern/Serif/cmun-serif.css);
-@import url(/assets/ComputerModern/Typewriter/cmun-typewriter.css);
-
-$base-font-family: "Computer Modern Serif", serif !default;
-$mono-font-family: "Computer Modern Typewriter", monospace;
+$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$mono-font-family: monospace !default;
 $base-font-size:   17px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
