--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,9 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li>
+            <a href="{{ "/" | relative_url }}">Home</a>
+          </li>
+          <li>
             {% if site.author %}
               {{ site.author | escape }}
             {% else %}
