--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,6 +62,10 @@ layout: default
 			{% if req == "jquery" %}
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 			{% endif %}
+
+			{% if req == "dat" %}
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.6/dat.gui.min.js" integrity="sha256-HJ7j+71YYw6Kcs8THwQV9lXmPOcR0eXlg7n8KRTZsyA=" crossorigin="anonymous"></script>
+			{% endif %}
 		{% endfor %}
 	{% endif %}
 
