--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -22,6 +22,20 @@ $content-width:    800px !default;
 $on-palm:          600px !default;
 $on-laptop:        800px !default;
 
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #444;
+    color: #e4e4e4;
+  }
+  a {
+    color: #e39777;
+  }
+  img {
+    filter: grayscale(30%);
+  }
+}
+
 @mixin media-query($device) {
   @media screen and (max-width: $device) {
     @content;
