--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,8 @@
-@import url("scheme.css");
-
-table.head, table.foot { width: 100%; }
+table { width: 100%; }
 td.head-rtitle, td.foot-os { text-align: right; }
 td.head-vol { text-align: center; }
 p,div.Pp { margin: 1ex 0ex; }
 div.Nd, div.Bf, div.Op { display: inline; }
-span.Pa, span.Ad { font-style: italic; }
-span.Ms { font-weight: bold; }
 dl.Bl-diag > dt { font-weight: bold; }
 code.Nm, code.Fl, code.Cm, code.Ic, code.In, code.Fd, code.Fn,
 code.Cd { font-weight: bold; font-family: inherit; }
@@ -17,7 +13,6 @@ table { border-collapse: collapse; }
 table.Nm code.Nm { padding-right: 1ch; }
 table.foot { margin-top: 1em; }
 
-html { background-color: var(--ansi16); color: var(--ansi17); }
-a { color: var(--ansi4); }
-a:visited { color: var(--ansi5); }
-a.permalink { color: var(--ansi3); text-decoration: none; }
+html { background-color: #CE3518; color: white; }
+a { color: black; }
+a.permalink { color: white; text-decoration: none; }
