link to repo properly

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -58,7 +58,7 @@ a.permalink { color: white; text-decoration: none; }
   {% if page.repo %}
   <tr>
     <td><code class="Nm">Repo</code></td>
-    <td><a class="Mt" href="{{ page.repo }}">{{ page.repo }}</a></td>
+    <td><a class="Mt" href="https://github.com/{{ page.repo }}">{{ page.repo }}</a></td>
   </tr>
   {% endif %}
   {% if page.commit %}
