--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,17 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" type="image/x-icon" href="{% link assets/favicon.png %}">
   <style type="text/css">
+@font-face {
+  font-family: "Departure Mono";
+  src: url(/assets/DepartureMono-Regular.woff2) format(woff2);
+}
 :root {
 	--theme-color: #CE3518;
 	--text-color: white;
 	--link-color: black;
 	--code-background: black;
 	--code-foreground: white;
-	--font-family: "Iosevka Term Slab Extended";
 }
 a { color: var(--link-color); }
 a.permalink { text-decoration: none; }
-html { background-color: var(--theme-color); color: var(--text-color); line-height: 1.25em; font-family: var(--font-family, monospace); font-display: swap; }
+* {font-family: Departure Mono, monospace; font-display: swap; }
+html { background-color: var(--theme-color); color: var(--text-color); line-height: 1.25em;  }
 body { max-width: 80ch; margin: 1em auto; padding: 0 1ch; }
 table { width: 100%; border-collapse: collapse; }
 table.foot { margin-top: 1em; }
